red/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red
  namespace: sandbox
  labels:
    app: red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: red
  template:
    metadata:
      labels:
        app: red
    spec:
      containers:
        - name: red
          image: lukamit/red:latest
          ports:
            - containerPort: 80
