red/clb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: red
  namespace: sandbox
spec:
  type: "LoadBalancer"
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    app: red
# add status with loadBalncer object here:
status:
  loadBalancer: {}
