red/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: sandbox
  name: red-service
spec:
  type: NodePort
  selector:
    app: red
  ports:
    # no "https" is defined
    - name: http
      port: 80
      targetPort: 80
